<resources>
    <string name="app_name">FoodOrderingApp</string>
    <string name="slogan" translatable="false">Eat for your life</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_my_home" translatable="false">MyHomeActivity</string>
    <string name="place_order">Order</string>
    <string name="refresh">Refresh</string>
    <string name="facebook_app_id" translatable="false">360628398643649</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb360628398643649</string>
    <string name="apiKeyPlace" translatable="false">AIzaSyBCvaOQ3THR62e-rTy1aebSzH81AK9XQUc</string>
    <string name="fn">Food name: </string>
    <string name="fd">Discount: </string>
    <string name="fp">Food price: </string>
    <string name="fq">Food quantity: </string>
    <string name="orID">Order ID: </string>
    <string name="orP">Order phone: </string>
    <string name="orA">Order address: </string>
    <string name="orT">Order total: </string>
    <string name="orC">Order comment: </string>
    <string name="orS">Order status: </string>
    <string name="enter_your_phone_number_for_the_first_login">Enter your phone number for the first login:</string>
    <string name="phone_number">Phone Number</string>
    <string name="total">Total:</string>
    <string name="your_address">Your address</string>
    <string name="your_name">Your name</string>
    <string name="hint_your_name">Your name…</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="set_your_new_password">Set your new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re enter new password</string>
    <string name="update">Update</string>
    <string name="enter_your_account_phone_to_reset_your_password">Enter your account phone to reset your password</string>
    <string name="next">Next</string>
    <string name="information_about_us">Information about us</string>
    <string name="address_3_cau_giay_lang_thuong_ward_dong_a_district_ha_noi_city">Address: 3 Cau Giay - Lang Thuong ward - Dong Đa district - Ha Noi city</string>
    <string name="detail">Detail</string>
    <string name="your_comment">Your comment…</string>
    <string name="place">Place</string>
    <string name="recipient_s_name">Recipient\'s name</string>
    <string name="full_name">Full name…</string>
    <string name="recipient_s_phone">Recipient\'s phone</string>
    <string name="province_city">Province / City</string>
    <string name="ward_commune">Ward / Commune</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery address</string>
    <string name="apartment_number_street_name">Apartment number,Street name,…</string>
    <string name="county_district">County / District</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="menu_name" translatable="false">Menu name</string>
    <string name="type_your_address">Type your address…</string>
    <string name="type_your_comment">Type your comment…</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="my_location">My location</string>
    <string name="cart">Cart</string>
    <string name="favorite_food">Favorite food</string>
    <string name="orders">Orders</string>
    <string name="change_password">Change password</string>
    <string name="change_information">Change information</string>
    <string name="sign_out">Sign out</string>
    <string name="my_l">My location</string>
    <string name="or">Order detail</string>
    <string name="or_info">Order info</string>
    <string name="or_place">Order place</string>
    <string name="or_status">Order status</string>
    <string name="t_signin">Sign in</string>
    <string name="t_signup">Sign up</string>
    <string name="t_uaddress">User address</string>
    <string name="t_fl">Food list</string>
    <string name="t_fbinfo">Facebook info</string>
    <string name="t_cart">Cart</string>
    <string name="t_changeinfo">Change information</string>
    <string name="t_ff">Favourite food</string>
    <string name="t_fooddetail">Food detail</string>
    <string name="t_newpass">New password</string>
    <string name="t_accphone">Account phone</string>
    <string name="change_language">Change language</string>
    <string name="select_language">Select your language !</string>
    <string name="cancel">Cancel</string>
    <string name="change_pass">Change password</string>
    <string name="fill_info">Fill all information to change !</string>
    <string name="change">Change</string>
    <string name="f">Please fill all information to change !</string>
    <string name="passwaschange">Password was changed !</string>
    <string name="a1">Enter a valid mobile !</string>
    <string name="a2">Add phone number successful !</string>
    <string name="a3">Wrong code !</string>
    <string name="c1">Nothing to order !</string>
    <string name="c3">Updated !</string>
    <string name="f1">Added to cart !</string>
    <string name="f2">Submit</string>
    <string name="f3">Very Bad</string>
    <string name="f4">Not Good</string>
    <string name="f5">Good</string>
    <string name="f6">Very good</string>
    <string name="f7">Excellent</string>
    <string name="f8">Rate this food</string>
    <string name="f9">Please select some stars and gie your feedback</string>
    <string name="f10">Please write your comment here…</string>
    <string name="f11">Thank you for submit rating !</string>
    <string name="fl1"> was added to Favorite</string>
    <string name="fl2"> was removed from Favorite</string>
    <string name="fl3">Enter your food</string>
    <string name="np1">Password was updated !</string>
    <string name="ip1">User not exist in Database</string>
    <string name="npns">New password not same !</string>
    <string name="wcp">Wrong current password !</string>
    <string name="unid">User not exist in Database</string>
    <string name="wp">Wrong password !</string>
    <string name="fff">Please fill all information before place !</string>
    <string name="ty">Thank you, order placed</string>
    <string name="o1">Invalid phone !</string>
    <string name="o2">Phone must start at 0!</string>
    <string name="o3">Recipient\'s name must contain 2 words or more !</string>
    <string name="o4">Apartment number must contain 2 words or more !</string>
    <string name="par">Phone Number already register !</string>
    <string name="e">Enter a valid mobile phone!</string>
    <string name="ee">Enter a valid name !</string>
    <string name="sus">Sign up successful !</string>
    <string name="wc">Wrong code !</string>
    <string name="pme">Password must be least 8 characters !</string>
    <string name="eea">Password must be least 1 Uppercase, 1 Number and 1 Symbol !</string>
    <string name="rm">Remove from Favourite</string>
    <string name="fillalll">Please fill all information before login !</string>

</resources>