<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".UserAddress">
    <LinearLayout
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/delivery_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtApartmentNumber"
            android:background="@drawable/button_rounded"
            android:textColorHint="#7C000000"
            android:hint="@string/apartment_number_street_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/province_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spProvinceCity"
            android:background="@drawable/button_rounded"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:text="@string/county_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spCountyDistrict"
            android:background="@drawable/button_rounded"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:text="@string/ward_commune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spWardCommune"
            android:background="@drawable/button_rounded"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/btnSign"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnConfirmAddress"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/btnSignActive"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnCancelAddress"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>