<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".FPassInputNewPass">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="40dp"
            android:textColor="@android:color/white"
            android:text="@string/set_your_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:id="@+id/edtNewPass"
            android:hint="@string/enter_new_password"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            android:layout_height="wrap_content"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:id="@+id/edtNewPassRepeat"
            android:hint="@string/re_enter_new_password"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/button_rounded"
        android:id="@+id/btnFPUpdatePass"
        android:layout_weight="1"
        android:text="@string/update"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>