<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".OrderInfo">
    <LinearLayout
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="20sp"
            android:text="@string/your_address"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center_vertical"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_rounded"
                android:id="@+id/tvUserAddress"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="70dp"/>
            <Button
                android:id="@+id/btnChangeAddress"
                android:textStyle="bold"
                android:textColor="#1AFF00"
                android:background="@android:color/transparent"
                android:text="@string/change"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/edtOrderComment"
            android:background="@drawable/button_rounded"
            android:textColorHint="#7A000000"
            android:hint="@string/your_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/btnSign"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnPlace"
                android:layout_weight="1"
                android:text="@string/place"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/btnSignActive"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnCancelPlace"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>