<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark_background"
    tools:context=".AddInfoFacebookLogin">
    <LinearLayout
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/enter_your_phone_number_for_the_first_login"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/spinnerCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:id="@+id/edtPhoneFacebookLogin"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnConfirmAddInfoFB"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/holo_green_light"
                android:background="@drawable/button_rounded"
                android:id="@+id/btnCancelAddInfoFB"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>